# CSC173-Project1-Finite-Automata

./: CMakeLists.txt  dfa.c  dfa.h  main.c  main.h  makeDfaNfa.c  makeDfaNfa.h  nfa.c  nfa.h
